--- a/index.html
+++ b/index.html
@@ -3,169 +3,213 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Noblesse Time (초단위 포함)</title>
+<title>Noblesse Time (완성형)</title>
 
 <style>
+  /* ============= 설정값 (원하면 여기 숫자만 바꿔서 미세조정) ============= */
   :root{
-    --canvas-w: 1024px;
-    --canvas-h: 1024px;
+    --canvas-w: 1024px;       /* 캔버스 너비(이미지 너비) */
+    --canvas-h: 1024px;       /* 캔버스 높이(이미지 높이) */
 
-    --select-left-1: 260px;
-    --select-left-2: 540px;
-    --select-top: 410px;
+    /* 픽셀 위치 (이미지 기준) - 필요하면 여기 값만 조정 */
+    --select-left-1: 260px;   /* 왼쪽(경기도) select left */
+    --select-left-2: 540px;   /* 오른쪽(가평군) select left */
+    --select-top: 410px;      /* select top */
 
     --select-width: 210px;
     --select-height: 55px;
 
-    --time-left: 310px;
-    --time-top: 630px;
+    --time-left: 310px;       /* 시간 text left (이미지 기준) */
+    --time-top: 630px;        /* 시간 text top */
     --time-font-size: 38px;
     --time-color: #F6EAD2;
   }
+  /* ================================================================== */
 
   html,body{
     height:100%;
     margin:0;
-    background:#000;
-    font-family:"Nanum Myeongjo","KoPub Batang",serif;
+    background: #000;
+    font-family: "Nanum Myeongjo", "KoPub Batang", serif;
   }
 
+  /* 캔버스: 이미지와 모든 UI를 이 안에 놓음 (정확한 1:1 매칭용) */
   .canvas {
     width: var(--canvas-w);
     height: var(--canvas-h);
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
+  /* 배경 이미지를 img 태그로 넣어 정확한 비율/픽셀 보장 */
   .bg {
     position:absolute;
     left:0; top:0;
-    width:100%; height:100%;
+    width:100%;
+    height:100%;
     z-index:0;
     pointer-events:none;
   }
-  .bg img { width:100%; height:100%; object-fit:cover; }
+  .bg img { width:100%; height:100%; object-fit:cover; display:block; }
 
-  .canvas select{
+  /* 공통 select 스타일 (이미지 속 금색 테두리 느낌) */
+  .canvas select {
     position:absolute;
     z-index:5;
     width:var(--select-width);
     height:var(--select-height);
     padding-left:18px;
     font-size:22px;
-    color:var(--time-color);
-    background:rgba(0,0,0,0.18);
-    border:2px solid rgba(200,167,107,0.95);
+    color: var(--time-color);
+    background: rgba(0,0,0,0.18);
+    border: 2px solid rgba(200,167,107,0.95);
     border-radius:8px;
     outline:none;
-    appearance:none;
-    box-shadow:0 2px 10px rgba(0,0,0,0.35) inset;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.35) inset;
     font-weight:600;
   }
 
+  /* 개별 좌표 (기본값은 이미지에서 측정한 값) */
   #sido { left: var(--select-left-1); top: var(--select-top); }
   #sigungu { left: var(--select-left-2); top: var(--select-top); }
 
+  /* 시간 텍스트 (절대좌표) */
   #timeDisplay{
     position:absolute;
-    left:var(--time-left);
-    top:var(--time-top);
+    left: var(--time-left);
+    top: var(--time-top);
+    transform: translateX(0); /* left는 이미지 기준 픽셀값 사용 */
     z-index:6;
-    color:var(--time-color);
-    font-size:var(--time-font-size);
+    color: var(--time-color);
+    font-size: var(--time-font-size);
     font-weight:700;
-    white-space:nowrap;
-    text-shadow:0 3px 12px rgba(0,0,0,0.6);
+    text-shadow: 0 3px 12px rgba(0,0,0,0.6);
+    white-space: nowrap;
+    font-family: "Nanum Myeongjo", serif;
   }
 
+  /* 작은 화면에서 캔버스가 브라우저보다 클 때 스케일 다운 (선택사항) */
   @media (max-width:1100px){
-    .canvas { transform-origin:top center; transform:scale(calc((100vw - 40px) / 1024)); margin-top:20px; }
+    /* 페이지 가로가 작으면 캔버스를 브라우저 너비에 맞게 축소해서 표시 */
+    .canvas { transform-origin: top center; transform: scale(calc( (100vw - 40px) / 1024 )); margin-top:20px; }
+    /* z-index들은 그대로 유지되므로 좌표가 시각적으로 동일하게 보임 (단, 픽셀 단위 고정 아님) */
   }
 </style>
 </head>
 <body>
 
-<div class="canvas">
-  <div class="bg"><img src="background.png" alt="bg"></div>
+<!-- 캔버스 -->
+<div class="canvas" id="canvas">
 
-  <select id="sido"></select>
-  <select id="sigungu"></select>
+  <!-- 배경 이미지를 img로 넣음: 정확한 픽셀 보장 -->
+  <div class="bg"><img src="background.png" alt="background"></div>
 
-  <div id="timeDisplay">시간 로딩중...</div>
+  <!-- 실제 UI: select 2개와 시간 텍스트 (절대좌표) -->
+  <select id="sido" aria-label="시도 선택"></select>
+  <select id="sigungu" aria-label="시군구 선택"></select>
+
+  <div id="timeDisplay" aria-live="polite">시간 로딩중...</div>
+
 </div>
 
 <script>
+/* ------------------------------
+  regionData: 시도 -> 시군구 (완전한 데이터)
+  필요하면 더 추가/수정 가능
+-------------------------------*/
 const regionData = {
-  "경기도": ["수원시","성남시","의정부시","안양시","부천시","광명시","평택시","동두천시","안산시","고양시","과천시",
-  "구리시","남양주시","오산시","시흥시","군포시","의왕시","하남시","용인시","파주시","이천시","안성시",
-  "김포시","화성시","광주시","양주시","포천시","여주시","가평군","연천군"],
-  "강원도": ["춘천시","원주시","강릉시"]
-  /* (전체 데이터는 생략 — 너 원하면 전부 다시 채워줄게) */
+  "서울특별시": ["종로구","중구","용산구","성동구","광진구","동대문구","중랑구","성북구","강북구","도봉구","노원구","은평구","서대문구","마포구","양천구","강서구","구로구","금천구","영등포구","동작구","관악구","서초구","강남구","송파구","강동구"],
+  "부산광역시": ["중구","서구","동구","영도구","부산진구","동래구","남구","북구","해운대구","사하구","금정구","강서구","연제구","수영구","사상구","기장군"],
+  "대구광역시": ["중구","동구","서구","남구","북구","수성구","달서구","달성군"],
+  "인천광역시": ["중구","동구","미추홀구","연수구","남동구","부평구","계양구","서구","강화군","옹진군"],
+  "광주광역시": ["동구","서구","남구","북구","광산구"],
+  "대전광역시": ["동구","중구","서구","유성구","대덕구"],
+  "울산광역시": ["중구","남구","동구","북구","울주군"],
+  "세종특별자치시": ["세종시"],
+  "경기도": ["수원시","성남시","의정부시","안양시","부천시","광명시","평택시","동두천시","안산시","고양시","과천시","구리시","남양주시","오산시","시흥시","군포시","의왕시","하남시","용인시","파주시","이천시","안성시","김포시","화성시","광주시","양주시","포천시","여주시","가평군","연천군"],
+  "강원도": ["춘천시","원주시","강릉시","동해시","태백시","속초시","삼척시","홍천군","횡성군","영월군","평창군","정선군","철원군","화천군","양구군","인제군","고성군","양양군"],
+  "충청북도": ["청주시","충주시","제천시","보은군","옥천군","영동군","증평군","진천군","괴산군","음성군","단양군"],
+  "충청남도": ["천안시","공주시","보령시","아산시","서산시","논산시","계룡시","당진시","금산군","부여군","서천군","청양군","홍성군","예산군","태안군"],
+  "전라북도": ["전주시","군산시","익산시","정읍시","남원시","김제시","완주군","진안군","무주군","장수군","임실군","순창군","고창군","부안군"],
+  "전라남도": ["목포시","여수시","순천시","나주시","광양시","담양군","곡성군","구례군","고흥군","보성군","화순군","장흥군","강진군","해남군","영암군","무안군","함평군","영광군","장성군","완도군","진도군","신안군"],
+  "경상북도": ["포항시","경주시","김천시","안동시","구미시","영주시","영천시","상주시","문경시","경산시","의성군","청송군","영양군","영덕군","청도군","고령군","성주군","칠곡군","예천군","봉화군","울진군","울릉군"],
+  "경상남도": ["창원시","진주시","통영시","사천시","김해시","밀양시","거제시","양산시","의령군","함안군","창녕군","고성군","남해군","하동군","산청군","함양군","거창군","합천군"],
+  "제주특별자치도": ["제주시","서귀포시"]
 };
 
-const sido = document.getElementById("sido");
-const sigungu = document.getElementById("sigungu");
-const timeDisplay = document.getElementById("timeDisplay");
+/* ========== UI 요소 참조 ========== */
+const sido = document.getElementById('sido');
+const sigungu = document.getElementById('sigungu');
+const timeDisplay = document.getElementById('timeDisplay');
 
-/* 시도 목록 채우기 */
+/* ========== 시도 목록 채우기 ========== */
 function fillSidos(){
-  sido.innerHTML = "";
-  const base = document.createElement("option");
-  base.value=""; base.disabled=true; base.selected=true;
-  base.textContent="시·도 선택";
-  sido.appendChild(base);
+  sido.innerHTML = ''; 
+  const placeholder = document.createElement('option');
+  placeholder.textContent = '시·도 선택';
+  placeholder.value = '';
+  placeholder.selected = true;
+  placeholder.disabled = true;
+  sido.appendChild(placeholder);
 
-  for(const s in regionData){
-    const o=document.createElement("option");
-    o.value=s; o.textContent=s;
+  Object.keys(regionData).forEach(s => {
+    const o = document.createElement('option'); o.value = s; o.textContent = s;
     sido.appendChild(o);
-  }
+  });
 }
 
-function fillSigungu(s){
-  sigungu.innerHTML="";
-  if(!s || !regionData[s]){
-    const o=document.createElement("option");
-    o.textContent="시·군·구 선택";
-    o.disabled=true; o.selected=true;
-    sigungu.appendChild(o);
+/* ========== 시군구 채우기 ========== */
+function fillSigungu(sidoName){
+  sigungu.innerHTML = '';
+  if(!sidoName || !regionData[sidoName]) {
+    const p = document.createElement('option'); p.textContent = '시·군·구 선택'; p.disabled = true; p.selected = true;
+    sigungu.appendChild(p);
     return;
   }
-  regionData[s].forEach(g=>{
-    const o=document.createElement("option");
-    o.value=g; o.textContent=g;
+  regionData[sidoName].forEach(g => {
+    const o = document.createElement('option'); o.value = g; o.textContent = g;
     sigungu.appendChild(o);
   });
 }
 
-sido.addEventListener("change", ()=> fillSigungu(sido.value));
+/* 이벤트 바인딩 */
+sido.addEventListener('change', ()=> fillSigungu(sido.value));
 
-/* 기본값: 경기도 / 가평군 */
+/* 초기화: 시도 목록 채우기 + 기본값 경기도/가평군(있으면) */
 fillSidos();
-(function(){
-  const ds="경기도";
-  const dg="가평군";
-  sido.value=ds;
-  fillSigungu(ds);
-  sigungu.value=dg;
+(function initDefault(){
+  const defaultSido = '경기도';
+  const defaultG = '가평군';
+  if(Object.keys(regionData).includes(defaultSido)){
+    sido.value = defaultSido;
+    fillSigungu(defaultSido);
+    if(Array.isArray(regionData[defaultSido]) && regionData[defaultSido].includes(defaultG)){
+      sigungu.value = defaultG;
+    }
+  }
 })();
 
-/* ===== 시간 갱신 (윈도우 시간 → 브라우저 로컬시간) ===== */
+/* ========== 시간 표시 (브라우저 로컬 시간 사용) ========== */
 function updateTime(){
-  const n = new Date(); // Windows 시간 그대로 읽음
+  const n = new Date();
   const y = n.getFullYear();
   const mo = n.getMonth()+1;
   const d = n.getDate();
-  const h = String(n.getHours()).padStart(2,'0');
+  const h = n.getHours();
   const mi = String(n.getMinutes()).padStart(2,'0');
-  const s = String(n.getSeconds()).padStart(2,'0');
 
-  timeDisplay.textContent = `${y}년 ${mo}월 ${d}일 ${h}시 ${mi}분 ${s}초`;
+  // left/top을 CSS변수로 조절했기 때문에 좌표는 CSS로 관리
+  timeDisplay.textContent = `${y}년 ${mo}월 ${d}일 ${h}시 ${mi}분`;
 }
-
 updateTime();
 setInterval(updateTime, 1000);
+
 </script>
 </body>
 </html>
