--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <style>
   :root{
-    --canvas-w: 1424px;
+    --canvas-w: 1024px;
     --canvas-h: 1024px;
 
     --select-left-1: 260px;
@@ -50,16 +50,15 @@
   .bg img { width:100%; height:100%; object-fit:cover; display:block; }
 
   /* ======================= 가독성 개선 적용 ========================== */
-  .canvas select {
+ .canvas select {
     position:absolute;
     z-index:5;
     width:var(--select-width);
     height:var(--select-height);
-    padding-left:18px;
     font-size:22px;
 
-    color: var(--select-text);       /* ← 글씨 더 밝게 */
-    background: rgba(0,0,0,0.35);    /* ← 배경 더 어둡게 */
+    color: var(--select-text);
+    background: rgba(0,0,0,0.35);
     border: 2px solid rgba(200,167,107,0.95);
 
     border-radius:8px;
@@ -67,7 +66,10 @@
     appearance:none;
     box-shadow: 0 2px 10px rgba(0,0,0,0.35) inset;
     font-weight:600;
-  }
+
+    text-align: center;    /* ← 글자 중앙 정렬 */
+    padding: 0;            /* ← 좌측 패딩 제거 */
+}
 
   #sido { left: var(--select-left-1); top: var(--select-top); }
   #sigungu { left: var(--select-left-2); top: var(--select-top); }
