--- a/index.html
+++ b/index.html
@@ -50,31 +50,55 @@
   .bg img { width:100%; height:100%; object-fit:cover; display:block; }
 
   /* ======================= 가독성 개선 적용 ========================== */
- .canvas select {
+.canvas select {
     position:absolute;
     z-index:5;
     width:var(--select-width);
     height:var(--select-height);
     font-size:28px;
 
+    /* 기존 스타일 유지 */
     color: var(--select-text);
     background: rgba(0,0,0,0.35);
     border: 2px solid rgba(200,167,107,0.95);
-
     border-radius:8px;
     outline:none;
     appearance:none;
     box-shadow: 0 2px 10px rgba(0,0,0,0.35) inset;
     font-weight:600;
 
-    text-align: center;    /* ← 글자 중앙 정렬 */
-    padding: 0;            /* ← 좌측 패딩 제거 */
+    text-align: center;
+    padding: 0;
+
+    /* ✨ 추가된 효과 ✨ */
+    transition: 0.25s ease;
+    box-shadow:
+        0 0 10px rgba(255, 230, 180, 0.4),
+        inset 0 0 10px rgba(255, 230, 180, 0.25);
 }
 
+/* hover 시 빛나는 효과 */
+.canvas select:hover {
+    border-color: rgba(255, 220, 160, 1);
+    box-shadow:
+        0 0 15px rgba(255, 225, 170, 0.85),
+        inset 0 0 12px rgba(255, 225, 170, 0.35);
+}
+
+/* 클릭(포커스) 시 더 강하게 빛남 */
+.canvas select:focus {
+    border-color: rgb(255, 240, 190);
+    box-shadow:
+        0 0 18px rgba(255, 240, 200, 1),
+        inset 0 0 14px rgba(255, 240, 200, 0.45);
+}
+
+/* 펼쳐진 옵션 목록 */
 .canvas select option {
     background: #ffffff !important;
     color: #000000 !important;
 }
+
   #sido { left: var(--select-left-1); top: var(--select-top); }
   #sigungu { left: var(--select-left-2); top: var(--select-top); }
 
